# attoparsec-data

./: .travis.yml  attoparsec-data.cabal
