name:
  attoparsec-data
version:
  0.1
category:
  Parsing
synopsis:
  Parsers for the standard Haskell data types
homepage:
  https://github.com/nikita-volkov/attoparsec-data
bug-reports:
  https://github.com/nikita-volkov/attoparsec-data/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2017, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/attoparsec-data.git

library
  hs-source-dirs:
    library
  exposed-modules:
    Attoparsec.Data.Text
  other-modules:
    Attoparsec.Data.Prelude
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- data:
    dlist >= 0.7 && < 0.9,
    aeson >= 0.7 && < 2,
    uuid == 1.3.*,
    vector >= 0.10 && < 0.12,
    time >= 1.4 && < 2,
    scientific >= 0.2 && < 0.4,
    text >= 1 && < 2,
    bytestring >= 0.10 && < 0.11,
    hashable >= 1.2 && < 1.3,
    unordered-containers == 0.2.*,
    -- 
    attoparsec == 0.13.*,
    -- 
    base-prelude < 2,
    base < 5
